--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,9 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      run: echo "A first hello"
-      run: mkdir -p my_workspace
-      run: echo "Trying out workspaces" >> my_workspace/echo-output
+      - run: echo "A first hello"
+      - run: mkdir -p my_workspace
+      - run: echo "Trying out workspaces" >> my_workspace/echo-output
       - persist_to_workspace:
         root: my_workspace
         paths:
