--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,8 @@ workflows:
   one_and_then_two: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - build
-      - two-job:
+      - one
+      - two:
             requires:
-                - build
+                - one
 
