--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,14 @@ jobs:
         # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
         macos:
           xcode: 14.1.0 # Specify the Xcode version to use
+          enivironment:
+            WISH_NAME: good morning
 
         # Add steps to the job
         # See: https://circleci.com/docs/2.0/configuration-reference/#steps
         steps:
           - checkout
+          - run: echo "Hi RaHuL " $WISH_NAME
           - run: pwd
           - run: echo "A first hello"
           - run: mkdir -p my_workspace
