--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ jobs:
         # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
         # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
         macos:
-          xcode: 14.1.0 # Specify the Xcode version to use
-        enivironment:
-            WISH_NAME: good morning
+          xcode: 14.1.0 # Specify the Xcode version to use'
+          environment:
+             WISH_NAME: good morning
 
         # Add steps to the job
         # See: https://circleci.com/docs/2.0/configuration-reference/#steps
