--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
         macos:
           xcode: 14.1.0 # Specify the Xcode version to use'
         environment:
-            WISH_NAME: good morning
+            WISH_NAME: "good morning"
 
         # Add steps to the job
         # See: https://circleci.com/docs/2.0/configuration-reference/#steps
