--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ jobs:
             - run:
                 name: Check versions and env
                 command: |
-                    ls -l
+                    bundle install
+                    bundle exec fastlane install_plugins
             #cd Source
             # bundle install
             # bundle exec fastlane install_plugins
