--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
                 name: Check versions and env
                 command: |
                     ls -l
+                    cd distiller
+                    ls -l
                     
             #cd Source
             # bundle install
