--- a/hello-world/Gemfile
+++ b/hello-world/Gemfile
@@ -2,5 +2,6 @@
 
 source "https://rubygems.org"
 
-gem "fastlane"
-gem "bundler"
+gem 'fastlane', '2.211.0'
+gem 'cocoapods', '1.11.3'
+gem 'bundler', '~> 2.0'
