--- a/hello-world/.circleci/config.yml
+++ b/hello-world/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
     before-script-job:
         macos:
             xcode: 14.1.0
+        working_directory: /Users/distiller/projec/hello-world
         steps:
             - checkout
             - run:
