--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,10 +85,10 @@ workflows:
   one_and_then_two: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - before-script-job
+#      - before-script-job
 #      - one-job
 #      - two-job:
 #            requires:
 #                - one-job
-#      - test-job
+      - test-job
 
